
build loop
======================

ClearCase
----------------------
* Detect ClearCase UCM stream rebases as modifications (CC-464). Patch by Scott Coplin.

CompositeBuilder
----------------------
* Fix reported build time.  Patch by Frederic Mockel. 

CurrentBuildStatusPageListener
----------------------
* Add documentation for CurrentBuildStatusPageListener

default-plugins.properties
----------------------
* Change default element name for CompositeBuilder from "builders" to "composite".

ExecScript
----------------------
* Handle commands with spaces on Linux (CC-551).  Patch by Frederic Mockel.

Main
----------------------
* Add logging of root exception when config file fails to parse on load.

MKS
----------------------
* Fix synchronization failure on Linux (CC-576).

OSEnvironment
----------------------
* Fix for Windows Server 2003 and Java 5 (CC-573). Patch by Nate Austin

P4
----------------------
* Display modification time using local timezone if correctForServerTime is true (CC-574). Patch by Anatol Pomozov

PropertyFileLabelIncrementer
----------------------
* PropertyFileLabelIncrementer uses specified property file, not the previous log file. (CC-519)  Patch by Chad Woolley and Joe Moore.

SocketPublisher
----------------------
* Send project name and fixed vs. successful status (CC-575). Patch by Daniel Lindner

SVN
----------------------
* Add checkExternals flag to check for changes in svn:externals. (CC-585). Patch by Chad Woolley.

Veto
----------------------
* New SourceControl plug-in used to prevent a project from building when a dependency is out of date.

Maven2SnapshotDependency
----------------------
* Fix OutOfMemory exception in Maven2SnapshotDependency (CC-578). Patch by Anatol Pomozov

reporting application
======================

rss.jsp
----------------------
* Fixed NPE for projects without logs in their directory.

NavigationCountTag
----------------------