@@ -32,6 +32,7 @@ CompositeBuilder
 CurrentBuildStatusPageListener
 ----------------------
 * Add documentation for CurrentBuildStatusPageListener
+* Fix validation messages when sourceFile invalid
 
 default-plugins.properties
 ----------------------
